fix whitespace under category dropdown, add SA logo in case we need it

--- a/app/assets/stylesheets/global.less
+++ b/app/assets/stylesheets/global.less
@@ -67,6 +67,7 @@ ul.ui-autocomplete.ui-menu {
     border-bottom: none;
     background-color: #F5F5F5;
     display: block;
+    padding-bottom: 1px;
   }
   
   .category_nostripe {
